--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,21 @@ annotated-types==0.6.0
 anyio==3.7.1
 async-timeout==4.0.3
 attrs==23.1.0
-beautifulsoup4==4.12.2
+backoff==2.2.1
+beautifulsoup4==4.12.3
 blinker==1.7.0
 cachetools==5.3.2
-certifi==2023.11.17
+certifi==2024.2.2
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
-dataclasses-json==0.6.2
+dataclasses-json==0.6.4
+dataclasses-json-speakeasy==0.5.11
 distro==1.8.0
+emoji==2.10.1
 faiss-cpu==1.7.4
+filetype==1.2.0
+fpdf==1.7.2
 frozenlist==1.4.0
 gitdb==4.0.11
 GitPython==3.1.40
@@ -24,19 +30,24 @@ httpx==0.25.2
 idna==3.6
 importlib-metadata==6.8.0
 Jinja2==3.1.2
+joblib==1.3.2
 jsonpatch==1.33
+jsonpath-python==1.0.6
 jsonpointer==2.4
 jsonschema==4.20.0
 jsonschema-specifications==2023.11.1
 langchain==0.0.340
+langdetect==1.0.9
 langsmith==0.0.66
+lxml==5.1.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
-marshmallow==3.20.1
+marshmallow==3.20.2
 mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
-numpy==1.26.2
+nltk==3.8.1
+numpy==1.26.4
 openai==1.3.5
 packaging==23.2
 pandas==2.1.3
@@ -49,10 +60,13 @@ pydantic_core==2.14.5
 pydeck==0.8.1b0
 Pygments==2.17.2
 python-dateutil==2.8.2
+python-iso639==2024.2.7
+python-magic==0.4.27
 pytz==2023.3.post1
 PyYAML==6.0.1
+rapidfuzz==3.6.1
 referencing==0.31.0
-regex==2023.10.3
+regex==2023.12.25
 requests==2.31.0
 rich==13.7.0
 rpds-py==0.13.1
@@ -62,18 +76,22 @@ sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.23
 streamlit==1.28.2
+tabulate==0.9.0
 tenacity==8.2.3
 tiktoken==0.5.1
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.3
-tqdm==4.66.1
+tqdm==4.66.2
 typing-inspect==0.9.0
-typing_extensions==4.8.0
+typing_extensions==4.9.0
 tzdata==2023.3
 tzlocal==5.2
-urllib3==2.1.0
+unstructured==0.12.6
+unstructured-client==0.18.0
+urllib3==1.26.18
 validators==0.22.0
+watchdog==4.0.0
+wrapt==1.16.0
 yarl==1.9.3
 zipp==3.17.0
-fpdf==1.7.2
