--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,7 @@ sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.23
 streamlit==1.28.2
+streamlit-tags==1.2.8
 tabulate==0.9.0
 tenacity==8.2.3
 tiktoken==0.5.1
