--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 nltk==3.8.1
 numpy==1.26.4
-openai==1.3.5
+openai
 packaging==23.2
 pandas==2.1.3
 pathlib==1.0.1
