--- a/requirements.txt
+++ b/requirements.txt
@@ -79,7 +79,7 @@ streamlit==1.28.2
 streamlit-tags==1.2.8
 tabulate==0.9.0
 tenacity==8.2.3
-tiktoken==0.5.1
+tiktoken
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.3
