--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 nltk==3.8.1
 numpy==1.26.4
-openai
+openai ==1.3.5
 packaging==23.2
 pandas==2.1.3
 pathlib==1.0.1
@@ -79,7 +79,7 @@ streamlit==1.28.2
 streamlit-tags==1.2.8
 tabulate==0.9.0
 tenacity==8.2.3
-tiktoken
+tiktoken==0.5.1
 toml==0.10.2
 toolz==0.12.0
 tornado==6.3.3
@@ -98,4 +98,3 @@ yarl==1.9.3
 zipp==3.17.0
 markdown==3.6
 pdfkit==1.0.0
-langchain-openai==0.1.0
