--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ langchain==0.0.340
 langdetect==1.0.9
 langsmith==0.0.66
 lxml==5.1.0
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.2
@@ -48,10 +49,11 @@ multidict==6.0.4
 mypy-extensions==1.0.0
 nltk==3.8.1
 numpy==1.26.4
-openai ==1.3.5
+openai==1.3.5
 packaging==23.2
 pandas==2.1.3
 pathlib==1.0.1
+pdfkit==1.0.0
 Pillow==10.1.0
 protobuf==4.25.1
 pyarrow==14.0.1
@@ -79,6 +81,7 @@ streamlit==1.28.2
 streamlit-tags==1.2.8
 tabulate==0.9.0
 tenacity==8.2.3
+thefuzz==0.22.1
 tiktoken==0.5.1
 toml==0.10.2
 toolz==0.12.0
@@ -96,5 +99,3 @@ watchdog==4.0.0
 wrapt==1.16.0
 yarl==1.9.3
 zipp==3.17.0
-markdown==3.6
-pdfkit==1.0.0
