--- a/requirements.txt
+++ b/requirements.txt
@@ -77,7 +77,7 @@ smmap==5.0.1
 sniffio==1.3.0
 soupsieve==2.5
 SQLAlchemy==2.0.23
-streamlit==1.28.2
+streamlit==1.34.0
 streamlit-tags==1.2.8
 tabulate==0.9.0
 tenacity==8.2.3
@@ -99,3 +99,4 @@ watchdog==4.0.0
 wrapt==1.16.0
 yarl==1.9.3
 zipp==3.17.0
+sendgrid==6.11.0
